User form validation updated, style fixes, username not showing after signup fixed

--- a/src/styles/form-button.scss
+++ b/src/styles/form-button.scss
@@ -1,7 +1,9 @@
 .form-button {
   display: block;
   width: 100%;
-  padding: 0.37rem 0.75rem;
+  padding: 0.5rem 0.75rem;
   border-radius: 6px;
   font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
 }
