--- a/src/styles/form-input.scss
+++ b/src/styles/form-input.scss
@@ -7,7 +7,5 @@
   border-radius: 6px;
   background-color: #212121;
   color: white;
-}
-.mb-1 {
-  margin-bottom: 1rem;
+  border-style: solid;
 }
