--- a/src/styles/user-form.scss
+++ b/src/styles/user-form.scss
@@ -32,6 +32,16 @@
       margin-top: 1rem;
       cursor: pointer;
     }
+
+    .error-message {
+      margin-top: 0.3rem;
+      font-weight: bold;
+      color: red;
+    }
+
+    .row-gap {
+      margin-top: 1.3rem;
+    }
   }
 }
 
